<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="AbbLinkinRequestQueue_Typ" Id="{0da73142-5815-463c-9973-c8dbb7228de0}">
    <Declaration><![CDATA[TYPE AbbLinkinRequestQueue_Typ :
STRUCT
	request	: AbbLinkinRequest_Typ;
	empty	: BOOL := TRUE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>